# leonardo-theme-bootswatch

./: ChangeLog  MANIFEST.in  README.rst  requirements.txt  setup.cfg
leonardo_theme_bootswatch/: __init__.py
leonardo_theme_bootswatch/static/base/page/bootswatch/: bootswatch.css
leonardo_theme_bootswatch/static/base/page/bootswatch/skins/: cosmo.css  lumen.css  readable.css  sandstone.css  spacelab.css  united.css  yeti.css
leonardo_theme_bootswatch/static/themes/bootswatch/: _styles.scss
leonardo_theme_bootswatch/static/themes/bootswatch/cosmo/: _styles.scss  _variables.scss
leonardo_theme_bootswatch/static/themes/bootswatch/cyborg/: _variables.scss
leonardo_theme_bootswatch/static/themes/bootswatch/paper/: scheme.scss
leonardo_theme_bootswatch/static/themes/bootswatch/united/: _variables.scss
leonardo_theme_bootswatch/templates/base/page/: bootswatch.html
leonardo_theme_bootswatch/templatetags/: theme.py
